eks-inter-lab/modules/k8s_commons/values/vault/istio_gateway.tpl.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vault-gateway
  namespace: vault
spec:
  selector:
    istio: gateway-private
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "vault.${dns_domain}"
  - port:
      number: 443
      name: https
      protocol: %{ if cloud_provider == "azure" }HTTPS%{ else }HTTP%{ endif }
    hosts:
      - "vault.${dns_domain}"
%{ if cloud_provider == "azure" }
    tls:
      mode: SIMPLE
      credentialName: wildcard-tls
%{ endif }
