eks-inter-lab/modules/k8s_commons/values/vault/istio_virtualservice.tpl.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault-virtualservice
  namespace: vault
spec:
  hosts:
    - "vault.${dns_domain}"
  gateways:
    - vault-gateway
  http:
    - match:
        - port: 80
      redirect:
        scheme: https
        port: 443
        redirectCode: 308

    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vault
            port:
              number: 8200
